# unbreak

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  outline.txt  output.json  pyproject.toml
_extras/: geography.csv  links.md
basicpy/: andor.py  catadd.py  catadd.txt  formula.py  indent.py  index.md  mutable.py  mutiter.py  nokey.py  nokey.txt  noreturn.py  recurse.py  sliding.py  sortnone.py  streq.json  streq.py  strmeth.py  trailing.py  trailing.txt
bibliography/: index.md
datasci/: aggorder.csv  aggorder.py  casejoin.py  chunkaccum.py  colorscale.py  datestring.csv  datestring.py  filterboundary.csv  filterboundary.py  filterfield.py  floatyear.py  index.md  lazyerror.py  multilinecsv.csv  multilinecsv.py  outoforder.py  polarsinaltair.py  quanttype.py  rolling.csv  rolling.py  sentinel.csv  sentinel.py  spurcorr.py  temporal.py  tooltip.py  whitespace.csv  whitespace.py  wrongdelim.py  wrongdelim_a.csv  wrongdelim_b.csv
dataviz/: absolute_vs_rate.html  absolute_vs_rate_fixed.html  cherry_pick.html  cherry_pick_fixed.html  cumulative_hides_slowdown.html  cumulative_hides_slowdown_fixed.html  dual_axis.html  dual_axis_fixed.html  ecological_fallacy.html  ecological_fallacy_fixed.html  index.md  mean_hides_distribution.html  mean_hides_distribution_fixed.html  overplotting.html  overplotting_fixed.html  pie_chart.html  pie_chart_fixed.html  regenerate.py  simpsons_paradox.html  simpsons_paradox_fixed.html  truncated_axis.html  truncated_axis_fixed.html
diot/: abspath.json  abspath.py  daylight.py  index.md  jsondate.py  loglevel.py  missparse.html  missparse.py  noassert.py  overexp.py  quotecsv.py  shared.py  walltime.py
docs/: index.html
finale/: index.md
glossary/: index.md
interpy/: alias.py  broad.py  cachekey.py  commas.csv  commas.py  exhaust.py  fpeq.py  index.md  lexisort.py  sharemut.py  super.py  unclosed.py  unclosed.txt
intro/: index.md
jsbrowser/: caching.html  caching.js  cors.html  cors_server.py  csp.html  deaddom.html  hoisting.html  index.md  localstorage.html  sourcemap.html  sourcemap.min.js  sourcemap_original.js  thisbind.html  unawaited.html  (+1 more)
(+129 files in other folders)
