[project]
name = "unbreak"
version = "0.1.0"
description = "unbreaking software"
authors = [{name = "Greg Wilson", email = "gvwilson@third-bit.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mccole>=2.3.0",
    "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://gvwilson.github.io/unbreak"
Repository = "https://github.com/gvwilson/unbreak"

[tool.mccole]
title = "Unbreaking Software"
repo = "https://github.com/gvwilson/unbreak"
skips = [
    "*~",
    "*.csv",
    "*.html",
    "*.js",
    "*.json",
    "*.py",
    "*.txt",
    ".ruff_cache/**",
    "__pycache__/**",
    "log/**",
    "uv.lock",
]
